// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator dbml {
  provider = "prisma-dbml-generator"
}

generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["fullTextSearch", "fullTextIndex"]
}

datasource db {
  provider     = "cockroachdb"
  url          = env("DATABASE_URL")
  relationMode = "prisma"
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model User {
  id            String    @id @default(cuid())
  name          String?
  email         String    @unique
  emailVerified DateTime?
  image         String?
  password      String? // For credentials authentication
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  // Personal Information
  firstName    String?
  lastName     String?
  phone        String?
  dateOfBirth  DateTime?
  age          Int?
  bio          String?
  profileImage String?

  // Location
  address String?
  city    String?
  state   String?
  zipCode String?

  // Financial Information
  employmentStatus String?
  occupation       String?
  employer         String?
  annualSalary     Float?
  netWorth         Float?
  totalDebt        Float?
  creditScore      String? // excellent, good, fair, poor, very-poor

  // Preferences
  buyerSeller     String? // buyer, seller, both
  budgetRange     String?
  preferredBrands String?

  // Notification Preferences
  emailNotifications Boolean @default(true)
  smsNotifications   Boolean @default(false)
  gender             String?

  // Relations
  accounts    Account[]
  carListings Car[]

  @@index([email])
}

model VerificationToken {
  id      String   @id @default(uuid())
  email   String
  token   String
  expires DateTime

  @@unique([email, token])
}

model PasswordResetToken {
  id      String   @id @default(uuid())
  email   String
  token   String
  expires DateTime

  @@unique([email, token])
}

model Car {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Basic Information
  title String
  make  String
  model String
  year  Int
  vin   String?

  // Vehicle Details
  mileage       Int
  condition     String // excellent, good, fair, poor
  bodyType      String // sedan, suv, truck, coupe, convertible, wagon, van, hatchback
  transmission  String // automatic, manual, cvt
  fuelType      String // gasoline, diesel, electric, hybrid, plug-in-hybrid
  exteriorColor String
  interiorColor String
  doors         Int
  seats         Int

  // Seller

  // Description & Features
  description String
  features    String[] // Array of feature IDs: bluetooth, backup-camera, navigation, etc.

  // Pricing
  price      Float
  negotiable Boolean

  // Images
  images String[] // Array of image URLs/base64 strings

  // Contact Information
  location  String
  ownerName String
  phone     String

  // Status (optional, for managing listings)
  status String  @default("draft") // draft, published, sold, archived
  user   User?   @relation(fields: [userId], references: [id]) // Remove name parameter
  userId String?

  @@index([make])
  @@index([year])
  @@index([price])
  @@index([status])
}
