//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table User {
  id String [pk]
  name String
  email String [unique, not null]
  emailVerified DateTime
  image String
  password String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  firstName String
  lastName String
  phone String
  dateOfBirth DateTime
  age Int
  bio String
  profileImage String
  address String
  city String
  state String
  zipCode String
  employmentStatus String
  occupation String
  employer String
  annualSalary Float
  netWorth Float
  totalDebt Float
  creditScore String
  buyerSeller String
  budgetRange String
  preferredBrands String
  emailNotifications Boolean [not null, default: true]
  smsNotifications Boolean [not null, default: false]
  gender String
  accounts Account [not null]
  carListings Car [not null]
}

Table VerificationToken {
  id String [pk]
  email String [not null]
  token String [not null]
  expires DateTime [not null]

  indexes {
    (email, token) [unique]
  }
}

Table PasswordResetToken {
  id String [pk]
  email String [not null]
  token String [not null]
  expires DateTime [not null]

  indexes {
    (email, token) [unique]
  }
}

Table Car {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  make String [not null]
  model String [not null]
  year Int [not null]
  vin String
  mileage Int [not null]
  condition String [not null]
  bodyType String [not null]
  transmission String [not null]
  fuelType String [not null]
  exteriorColor String [not null]
  interiorColor String [not null]
  doors Int [not null]
  seats Int [not null]
  description String [not null]
  features String[] [not null]
  price Float [not null]
  negotiable Boolean [not null]
  images String[] [not null]
  location String [not null]
  ownerName String [not null]
  phone String [not null]
  status String [not null, default: 'draft']
  user User
  userId String
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Car.userId > User.id